# hatespeech

./: .gitignore  config.json  data.py  data_helpers.py  datamodule.py  main.py  module.py  preprocess.py  pyproject.toml  readme.org  visualize.py
adapters/base/bn/label/adapter/: adapter_config.json
adapters/base/lora/label/adapter/: adapter_config.json
adapters/base/lora/merge/label/: adapter_config.json
adapters/base/lora/merge/qlora/: adapter_config.json
adapters/base/lora/merge/score/: adapter_config.json
adapters/base/lora/target2/adapter/: adapter_config.json
adapters/base/lora/target_merge/merged/: adapter_config.json
adapters/base/lora/target_merge/target1/: adapter_config.json
adapters/small/lora16/target4/: heads.pt
adapters/small/lora16/target_fuse/: heads.pt
adapters/small/lora16/target_fuse_with_head/: heads.pt
adapters/small/lora16/target_merge/: results.csv
adapters/small/lora16/target_parallel/: heads.pt
adapters/small/lora16/target_part_1/: heads.pt  results.csv
adapters/small/lora16/target_part_2/: heads.pt  results.csv
adapters/small/lora16/target_part_3/: heads.pt  results.csv
adapters/small/lora16/target_part_4/: results.csv
adapters/small/lora16/target_single/: heads.pt  results.csv
analysis/: partition_f1.py
common/: __init__.py  config.py  data_info.py
data/: col_info.json  stats.json
modeling/: __init__.py  base_model.py  base_module.py  custom.py  datamodule.py  debug.py  experiments.py  heads.py  hydra_model.py  methods.py  misc.py  model.py  models.py  module.py  mtl_lora.py  mtl_loss.py  mtl_model.py  multimodel.py  peft_model.py  std_model.py  task_set.py  tasks.py  trainer.py  utils.py  visualize.py
preprocessing/: __init__.py  base_preprocessor.py  explain.py  explain_preprocessor.py  hatexplain.py  measuring.py  measuring_preprocessor.py  preprocessor.py  stats.py  utils.py
scripts/: clean_runs.py  fix_explain.py  model.py  partition_f1.py  preprocess.py
(+19 files in other folders)
