[project]
name = "jigsaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adapters>=1.1.0",
    "dotenv>=0.9.9",
    "lightning[extra]>=2.5.0.post0",
    "matplotlib>=3.10.0",
    "nltk>=3.9.1",
    "numpy<2.0",
    "optimum-quanto>=0.2.7",
    "pandas>=2.2.3",
    "pyarrow>=11.0.0",
    "pyspark>=3.5.5",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "textattack",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.6.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
]

[dependency-groups]
dev = []
