[project]
name = "hatespeech"
version = "0.2.0"
description = "hatespeech detection with mtl and adapters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"accelerate>=1.6.0",
	"adapters>=1.1.1",
	"bitsandbytes>=0.45.3",
	"hydra-zen>=0.14.0",
	"lightning[extra]>=2.5.0.post0",
	"mlflow>=2.21.3",
	"nltk>=3.9.1",
	"numpy<2.0",
	"optimum-quanto>=0.2.7",
	"pandas>=2.2.3",
	"peft>=0.15.2",
	"pyjson5>=1.6.8",
	"pyspark>=3.5.5",
	"torch>=2.5.1",
	"torchinfo>=1.8.0",
	"torchmetrics>=1.6.1",
	"torchvision>=0.21.0",
	"transformers>=4.47.1",
]

[dependency-groups]
dev = []

[tool.pyright]
reportPrivateImportUsage = false # transformers dynamic imports
reportWildcardImportFromLibrary = false
reportRedeclaration = false
extraPaths = ["transformers"]
